# simple-arpeggiator-dssi

./: ChangeLog  README.md  configure.ac
src/: Makefile  Makefile.am  Makefile.in  SimpleArpeggiator-DSSI_gtk.h  simple-arpeggiator-dssi.c
